He reescrito algunas partes para ponerlas mas sencillas sin tocar funcionalidad